CR-2004-05-19-0: Bugfix:    o Removed -lj Option for execd
                            o added/fixed help output to sge_execd, sge_qmaster
                              sge_shepherd and sge_coshepherd (IZ#1026).
                            o fixed bug in when host_aliases are active 
                              (all mapped host names had to be resolvable on 
                               local host, now mapped names must not be real
                               resolveable host names )
                            o removed duplicate error message when execd can't
                              create communication handle (bind tcp port)
                 Issue:     1026
                 Changed:   qmaster, execd, shepherd, coshepherd, libcom
                 Review:    JG

DT-2004-05-19-0: Bugfix:    o Fixed errors in DRMAA howto
                 Changed:   howto

JG-2004-05-19-0: Bugfix:    Qmaster logged errors when immediate array job 
                            couldn't be scheduled.
                 Issue:     1037
                            If qmaster was shutdown before finished jobs were 
                            deleted via schedd order, these jobs showed up again
                            as running after qmaster restart.
                 Changed:   qmaster
                 Review:    SG

DT-2004-05-18-0: Cleanup:   o Cleaned up some code and comments
                            o Added test program for DRMAA Java binding
                            o Cleaned up JNI code for DRMAA Java binding
                 Changed:   qsub, DRMAA, various others

MD-2004-05-18-4: Enhamcem:  - more comments in inst_template.conf

JG-2004-05-18-3: Bugfix:    Fixed a core dump in qmaster.

SG-2004-05-18-4: Bugfix:    fixed the qstat -t -xml output.
                 Issue:     1043
                 Changed:   qstat
                 Review:    JG

SG-2004-05-18-3: Bugfix:    changed the qdel man page
                 Changed:   qdel.1
